(feat) Draggable handle on the timeline. Needs fix to avoid shift due to the timer still running during the drag

--- a/client/css/map.css
+++ b/client/css/map.css
@@ -13,8 +13,17 @@ body {
   overflow: hidden;
 }
 
+.handle {
+  fill: #fff;
+  cursor: pointer;
+}
+
 #timeline {
   font-size: 0.5em;
+  
+}
+#timeline svg {
+  height: 40px;
 }
 
 .hide {
